# coopfight

./: .gitignore  Cargo.toml  requirements.txt
.coopfight/: pyvenv.cfg
config/: config_game.json
notebooks/: analysis_fight.ipynb  analysis_global.ipynb  analysis_survival.ipynb  analysis_time.ipynb  analysis_tullock.ipynb
scripts/: collect_networks.py  launch_coopfight.sh  parallel_coopfight.sh
src/: agent.rs  core.rs  lib.rs  main.rs  plots.py  utils.py  utils.rs
