[package]
name = "coopfight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
csv = "1.1"
dashmap = "4.0"
GSL = "6.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
tempfile = "3.10.1"
uuid = { version = "0.8.2", features = ["v4"] }
